--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
-    <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <title>RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good</title>
+    <meta name="keywords" content="Recommender Systems, Sustainability, Social Good, SDGs">
+    <meta name="description" content="RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
