--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good</title>
+    <title>First International Workshop on Recommender Systems for Sustainability and Social Good</title>
     <meta name="keywords" content="Recommender Systems, Sustainability, Social Good, SDGs">
     <meta name="description" content="RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good">
     <meta name="author" content="Allegra De Filippo">
@@ -185,7 +185,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>RecSoGood 2024 </strong></h1>
-                            <p class="m-b-40"><strong>RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</strong></p>
+                            <p class="m-b-40"><strong>First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</strong></p>
                         </div>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>RecSoGood 2024 </strong></h1>
-                            <p class="m-b-40"><strong>RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</strong></p>
+                            <p class="m-b-40"><strong>First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</strong></p>
                     </div>
                 </div>
             </li>
@@ -206,7 +206,7 @@
                     <div class="row">
                         <div class="col-md-12">
 							<h1 class="m-b-20"><strong>RecSoGood 2024 </strong></h1>
-                            <p class="m-b-40">RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</p></div></div>
+                            <p class="m-b-40">First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</p></div></div>
                     </div>
                 </div>
             </li>
