--- a/index.html
+++ b/index.html
@@ -245,10 +245,15 @@ and inspire collective action towards a more sustainable future.
                               10.0pt;mso-ansi-language:EN-US'>The aim of this workshop is to focus on the sustainability perspective.
                               <br>
                               Topics of interests include but are not limited to:
+				  <br>
 <o:p></o:p></span></p>
 
                           
-						  <p class=Normale1 style='text-align:justify;color:black;'><b>Sustainable Recommender Systems Development
+						  <p class=Normale1 style='text-align:justify;color:black;'><b>Sustainable Recommender Systems Development:
+							<br> - Multi-criteria Recommender Systems
+							<br> – Multistakeholder Recommender Systems
+							<br> – Energy efficient and low-carbon model learning
+							<br> – User interfaces for sustainable Recommender Systems  
                           </b></p>
 						  <p class=Normale1 style='text-align:justify;color:black;'><b>Sustainable Recommender Systems Features
                           </b></p>
@@ -257,7 +262,7 @@ and inspire collective action towards a more sustainable future.
 						  <p class=Normale1 style='text-align:justify;color:black;'><b>Application Areas
                           </b></p>
 						
-                          </b></p>-->
+                          </b></p>
                           <p class=MsoNormal><span lang=EN-US style='mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></p>
                           </div>
                     </div>
