--- a/call.html
+++ b/call.html
@@ -169,12 +169,26 @@
                     (B) <strong>Short/Position papers</strong> (max 6 pages + references - Springer LLNCS format);</p>
 					                    <p style='text-align:justify;color:black;'><strong>Topics of Interest include but are not limited to:</strong>
 					                                              <ul style="font-size: 18px !important;">
-                      <li>  - AI role in understanding human creative processes</li>
-                      <li>  - AI systems able to either assist or produce artistic outputs</li>
-                      <li>  - Cognitive intelligence and learning for music composing, performing and matching</li>
-					  <li>  - Evaluation methodologies of AI artistic outputs, and creativity in AI systems</li>
-					  <li>  - Ethical issues raised by creative AI systems (authorship, integrity, bias…)</li>
-					  <li>  - Neuroscience, cognitive science and psychology for AI on creativity</li>
+                      <li>  Sustainable Recommender Systems Development: </li>
+		      <br> – Multi-criteria Recommender Systems
+		      <br> – Multistakeholder Recommender Systems
+		      <br> – Energy efficient and low-carbon model learning
+		      <br> – User interfaces for sustainable Recommender Systems  
+                      <li>  Sustainable Recommender Systems Features:</li>
+		      <br>  – Explainablility & trustworthy
+			<br>  – Privacy and safety
+			<br>  – Diversity and inclusion
+			<br>  – Behavioural change
+                      <li>  Evaluation of Sustainable Recommender Systems:</li>
+			<br> – Long-term effect of Recommender Systems
+			<br> – Simulation techniques
+			<br> – Beyond accuracy evaluation	
+		 <li>  Application Areas: </li>
+			<br> – Health
+			<br> – Media and information
+			<br> – Travel and tourism
+			<br> – Agriculture
+					  
                     </ul>
                     <br>
 					
