--- a/call.html
+++ b/call.html
@@ -169,22 +169,22 @@
                     (B) <strong>Short/Position papers</strong> (max 6 pages + references - Springer LLNCS format);</p>
 					                    <p style='text-align:justify;color:black;'><strong>Topics of Interest include but are not limited to:</strong>
 					                                              <ul style="font-size: 18px !important;">
-                      <li>  Sustainable Recommender Systems Development: </li>
-		      <br> – Multi-criteria Recommender Systems
+                      <li>  <b>Sustainable Recommender Systems Development:</b> </li>
+		      – Multi-criteria Recommender Systems
 		      <br> – Multistakeholder Recommender Systems
 		      <br> – Energy efficient and low-carbon model learning
 		      <br> – User interfaces for sustainable Recommender Systems  
-                      <li>  Sustainable Recommender Systems Features:</li>
-		      <br>  – Explainablility & trustworthy
+                      <li>  <b>Sustainable Recommender Systems Features:</b></li>
+		        – Explainablility & trustworthy
 			<br>  – Privacy and safety
 			<br>  – Diversity and inclusion
 			<br>  – Behavioural change
-                      <li>  Evaluation of Sustainable Recommender Systems:</li>
-			<br> – Long-term effect of Recommender Systems
+                      <li>  <b>Evaluation of Sustainable Recommender Systems:</b></li>
+			– Long-term effect of Recommender Systems
 			<br> – Simulation techniques
 			<br> – Beyond accuracy evaluation	
-		 <li>  Application Areas: </li>
-			<br> – Health
+		 <li>  <b>Application Areas: </b></li>
+			– Health
 			<br> – Media and information
 			<br> – Travel and tourism
 			<br> – Agriculture
