--- a/motivation.html
+++ b/motivation.html
@@ -172,10 +172,17 @@
                 <div class="col-lg-6">
                     <h2 class="noo-sh-title-top">Background and Topic Relevence</span></h2>
 
-<p style="text-align: justify; color :black">Artificial Intelligence (AI) has become widespread in a large array of different domains: in the area of art creation, AI has gained increasing popularity by demonstrating its great potential. In recent years, AI showed a certain degree of creativity (in painting, composition, writing and design), but it also helped to analyze and study the mechanisms of creativity from a broader perspective: from the socio-anthropological to  psychological as well as cognitive impact of the autonomous creative processes of artificial intelligence. These advances are leading to new opportunities research perspectives, while also posing challenging questions related to authorship, integrity, bias and evaluation of AI artistic outputs.
-
-This workshop aims to collect and bridge the gap among technologies and most recent advances in the area of creative AI in terms of the enabling creation, analysis and understanding technologies. The theme topic of the workshop will be AI and creativity.
-
+<p style="text-align: justify; color :black">In the rapidly evolving landscape of technology and sustainability, leveraging Recommender Systems has emerged as a powerful tool
+for driving positive change. With a foundation in AI and data analytics, Recommender Systems can be effective in various domains,
+from e-commerce to energy management and well-being. By harnessing the power of recommendation algorithms under a holistic
+perspective, organizations and researchers can guide users towards more sustainable choices and behaviors, contributing to broader environmental and social goals. With this aim, our workshop provides
+a unique platform for researchers, practitioners, and stakeholders to explore the integration of sustainability principles into Recommender Systems. Through presentations, discussions, and panels, participants will explore the theoretical foundations, practical implementations, and ethical and environmental considerations of
+sustainable Recommender Systems. From that perspective, we propose this workshop to collect contributions and bridge the gap between recent advances in RecSys
+and their impact in terms of sustainability. We emphasize the need for Recommender Systems designed with consideration for their
+broader societal implications, ensuring that economic benefits do not compromise social welfare or environmental sustainability. By
+integrating sustainability principles into recommendation algorithms, we aim to harness the power of technology to drive positive
+societal and environmental change.
+	
 </p>
 
                 </div>
