--- a/motivation.html
+++ b/motivation.html
@@ -177,8 +177,8 @@ for driving positive change. With a foundation in AI and data analytics, Recomme
 from e-commerce to energy management and well-being. By harnessing the power of recommendation algorithms under a holistic
 perspective, organizations and researchers can guide users towards more sustainable choices and behaviors, contributing to broader environmental and social goals. With this aim, our workshop provides
 a unique platform for researchers, practitioners, and stakeholders to explore the integration of sustainability principles into Recommender Systems. Through presentations, discussions, and panels, participants will explore the theoretical foundations, practical implementations, and ethical and environmental considerations of
-sustainable Recommender Systems. From that perspective, we propose this workshop to collect contributions and bridge the gap between recent advances in RecSys
-and their impact in terms of sustainability. We emphasize the need for Recommender Systems designed with consideration for their
+sustainable Recommender Systems. 
+	<br> We emphasize the need for Recommender Systems designed with consideration for their
 broader societal implications, ensuring that economic benefits do not compromise social welfare or environmental sustainability. By
 integrating sustainability principles into recommendation algorithms, we aim to harness the power of technology to drive positive
 societal and environmental change.
