--- a/organizers.html
+++ b/organizers.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
+    <title>First International Workshop on Recommender Systems for Sustainability and Social Good | co-located with RecSys 2024</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="First International Workshop on Recommender Systems for Sustainability and Social Good">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
@@ -167,20 +167,20 @@
 
                     <p style="text-align: justify; color :black;list-style: disc;">
                       <ul id ="org">
-                        <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – PostDoc Research Fellow - University of Bologna, Italy  (main contact)<br>
-                          E-mail:<span style="color:blue;"> allegra.defilippo@unibo.it </span>- homepage: <a href="https://www.unibo.it/sitoweb/allegra.defilippo" style="color:blue;">https://www.unibo.it/sitoweb/allegra.defilippo</a>
+                        
+                        <li style="list-style: disc;"><b>Ludovico Boratto</b> – Associate Professor - University of Cagliari, Italy<br>
+                          E-mail: <span style="color:blue;"> michela.milano@unibo.it</span>  
                           </li><br>
-                        <li style="list-style: disc;"><b>Michela Milano</b> – Full Professor and Head of Centro Interdipartimentale Alma Mater Research Institute for Human-Centered Artificial Intelligence - University of Bologna, Italy<br>
-                          E-mail: <span style="color:blue;"> michela.milano@unibo.it</span>  - homepage: <a href="https://www.unibo.it/sitoweb/michela.milano" style="color:blue;">https://www.unibo.it/sitoweb/michela.milano</a>
-                          </li><br>
+			 
+			      <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior Assistant Professor - University of Bologna, Italy  (main contact)<br>
+                          E-mail:<span style="color:blue;"> allegra.defilippo@unibo.it </span>
 
-                          <li style="list-style: disc;"><b>Valentina Presutti</b> – Associate Professor - University of Bologna, Italy<br>
-                            E-mail: <span style="color:blue;"> valentina.presutti@unibo.it</span>  - homepage: <a href="https://www.unibo.it/sitoweb/valentina.presutti" style="color:blue;">https://www.unibo.it/sitoweb/valentina.presutti</a>
-                            </li><br>
-
-                          <li style="list-style: disc;"><b>Alessandro Saffiotti</b> – Full Professor – University of Örebro, Sweden<br>
-                            E-mail: <span style="color:blue;"> alessandro.saffiotti@oru.se </span>  - homepage: <a href="https://www.oru.se/english/employee/alessandro_saffiotti" style="color:blue;">https://www.oru.se/english/employee/alessandro_saffiotti</a>
+                          <li style="list-style: disc;"><b>Elisabeth Lex</b> – Associate Professor – Graz University of Technology, Austria<br>
+                            E-mail: <span style="color:blue;"> elisabeth.lex@tugraz.at </span>  
                           </li>
+			      <li style="list-style: disc;"><b>Francesco Ricci</b> – Retired Full Professor - Free University of Bozen–Bolzano, Italy<br>
+                            E-mail: <span style="color:blue;"> fmr959@gmail.com</span>  - homepage: <a href="https://www.unibo.it/sitoweb/valentina.presutti" style="color:blue;">https://www.unibo.it/sitoweb/valentina.presutti</a>
+                            </li><br>
                       </ul>
                     </p>
 
