--- a/organizers.html
+++ b/organizers.html
@@ -172,12 +172,13 @@
                           E-mail: <span style="color:blue;"> michela.milano@unibo.it</span>  
                           </li><br>
 			 
-			      <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior Assistant Professor - University of Bologna, Italy  (main contact)<br>
+			      <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior Assistant Professor - University of Bologna, Italy<br>
                           E-mail:<span style="color:blue;"> allegra.defilippo@unibo.it </span>
-
+			</li><br>
+			      
                           <li style="list-style: disc;"><b>Elisabeth Lex</b> – Associate Professor – Graz University of Technology, Austria<br>
                             E-mail: <span style="color:blue;"> elisabeth.lex@tugraz.at </span>  
-                          </li>
+                          </li><br>
 			      <li style="list-style: disc;"><b>Francesco Ricci</b> – Retired Full Professor - Free University of Bozen–Bolzano, Italy<br>
                             E-mail: <span style="color:blue;"> fmr959@gmail.com</span>  - homepage: <a href="https://www.unibo.it/sitoweb/valentina.presutti" style="color:blue;">https://www.unibo.it/sitoweb/valentina.presutti</a>
                             </li><br>
