--- a/organizers.html
+++ b/organizers.html
@@ -169,7 +169,7 @@
                       <ul id ="org">
                         
                         <li style="list-style: disc;"><b>Ludovico Boratto</b> – Associate Professor - University of Cagliari, Italy<br>
-                          E-mail: <span style="color:blue;"> michela.milano@unibo.it</span>  
+                          E-mail: <span style="color:blue;"> ludovico.boratto@unica.it</span>  
                           </li><br>
 			 
 			      <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior Assistant Professor - University of Bologna, Italy<br>
