--- a/organizers.html
+++ b/organizers.html
@@ -180,7 +180,7 @@
                             E-mail: <span style="color:blue;"> elisabeth.lex@tugraz.at </span>  
                           </li><br>
 			      <li style="list-style: disc;"><b>Francesco Ricci</b> – Retired Full Professor - Free University of Bozen–Bolzano, Italy<br>
-                            E-mail: <span style="color:blue;"> fmr959@gmail.com</span>  - homepage: <a href="https://www.unibo.it/sitoweb/valentina.presutti" style="color:blue;">https://www.unibo.it/sitoweb/valentina.presutti</a>
+                            E-mail: <span style="color:blue;"> fmr959@gmail.com</span> 
                             </li><br>
                       </ul>
                     </p>
