--- a/call.html
+++ b/call.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Italian Workshop on Artificial Intelligence and Creativity</title>
-    <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <title>RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good</title>
+    <meta name="keywords" content="Recommender Systems, Sustainability, Social Good, SDGs">
+    <meta name="description" content="RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
@@ -196,19 +196,19 @@
                       <a style="color:blue;" target="_blank" href="https://easychair.org/conferences/?conf=aixia2022">https://easychair.org/conferences/?conf=aixia2022</a>
                     </i></u></p>
                     <p style='text-align:justify;color:black;'>All submitted papers will be evaluated by at least two members of the program committee, based on originality, significance, relevance and technical quality. Papers should be formatted according to the <strong>Springer LLNCS Style</strong>: <a style="color:blue;" href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">(template) </a><br>
-                    Submissions should be single blinded, i.e. authors names should be included in the submissions. Submissions must be made through the EasyChair conference system prior the specified deadline (all deadlines refer to GMT) by selecting CREAI as submission track. At least one of the authors should register and take part at the conference to make the presentation.</p>
+                    Submissions should be double blinded. Submissions must be made through the EasyChair conference system prior the specified deadline (all deadlines refer to GMT) by selecting RecSoGood as submission track. At least one of the authors should register and take part at the conference to make the presentation.</p>
                                           <br><p style='text-align:justify;color:black;'><strong>Important Dates</strong><br>
 					  
-                      * Paper submission deadline: <b>October 3th, 2022</b><br>
+                      * Paper submission deadline: <b>TBD, 2024</b><br>
 
-                      * Notification to authors: <b>October 30th, 2022</b><br>
+                      * Notification to authors: <b>TBD, 2024</b><br>
 
-                      * Camera-Ready submission: <b>November 7th, 2022</b><br>
+                      * Camera-Ready submission: <b>TBD, 2024</b><br>
 					  <br>
 
                     </p>
 					<p style='text-align:justify;color:black;'><strong>Proceedings and Post Proceedings</strong>
-					<br><p style='text-align:justify;color:black;'>All accepted papers will be published in the AIxIA series of CEUR-WS. <!--A selection of the best papers, accepted for the presentation at the workshops, will be invited to submit an extended version for publication on “intelligenza Artificiale”, the International Journal of the Italian Association for Artificial Intelligence, edited by IOS Press and indexed by Thomson Reuters' "Emerging Sources Citation Index" and Scopus by Elsevier.</p>-->
+					<br><p style='text-align:justify;color:black;'>All accepted papers will be published in the .... <!--A selection of the best papers, accepted for the presentation at the workshops, will be invited to submit an extended version for publication on “intelligenza Artificiale”, the International Journal of the Italian Association for Artificial Intelligence, edited by IOS Press and indexed by Thomson Reuters' "Emerging Sources Citation Index" and Scopus by Elsevier.</p>-->
                     <!--<br><p style='text-align:justify;color:black;'><strong>Presentation Format</strong>
 					<br><p style='text-align:justify;color:black;'>Authors of accepted papers accepted papers at the workshops will be requested to provide a video recorded presentation of their work. Presentations will be available to all members of the association. Videos must have a length between 5 and 8 minutes according to the rules given by the workshop organizers. The video should be in MP4 format (1280x720). More details will be published here.</p>
 					--><br><p style='text-align:justify;color:black;'>For any information write to:</p>
@@ -226,10 +226,10 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it/"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="https://recsys.acm.org/"><h3>co-located with RecSys 2024</h3></a>
 							<ul class="list-time">
-								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+								<li>The 18th ACM Recommender Systems Conference
+</li> <li><br> Bari (Italy), October 14-18, 2024 </li> 
               </ul>
             </div>
 					</div>
@@ -240,8 +240,8 @@
 							<h3>Social Media</h3>
 							<p>Follow us on the most famous Social Networks</p>
 							<ul>
-                                <li><a href="https://www.facebook.com/AIxIA1988/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="https://twitter.com/ai_x_ia"><i class="fab fa-twitter" aria-hidden="true"></i></a></li><!--
+                                <li><a href="https://www.facebook.com/acmrecsys"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://twitter.com/ACMRecSys"><i class="fab fa-twitter" aria-hidden="true"></i></a></li><!--
                                 <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
