--- a/call.html
+++ b/call.html
@@ -193,7 +193,7 @@
                     <br>
 					
 					<br><p style='text-align:justify;color:black;'><strong>Submission Site</strong> <u><i>
-                      <a style="color:blue;" target="_blank" href="https://easychair.org/conferences/?conf=aixia2022">https://easychair.org/conferences/?conf=aixia2022</a>
+                      <a style="color:blue;" target="_blank" href="TBD">https://easychair.org/conferences/?conf=aixia2022</a>
                     </i></u></p>
                     <p style='text-align:justify;color:black;'>All submitted papers will be evaluated by at least two members of the program committee, based on originality, significance, relevance and technical quality. Papers should be formatted according to the <strong>Springer LLNCS Style</strong>: <a style="color:blue;" href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">(template) </a><br>
                     Submissions should be double blinded. Submissions must be made through the EasyChair conference system prior the specified deadline (all deadlines refer to GMT) by selecting RecSoGood as submission track. At least one of the authors should register and take part at the conference to make the presentation.</p>
