--- a/organizers.html
+++ b/organizers.html
@@ -172,7 +172,7 @@
                           E-mail: <span style="color:blue;"> ludovico.boratto@unica.it</span>  
                           </li><br>
 			 
-			      <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior Assistant Professor - University of Bologna, Italy<br>
+			      <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Assistant Professor - University of Bologna, Italy<br>
                           E-mail:<span style="color:blue;"> allegra.defilippo@unibo.it </span>
 			</li><br>
 			      
