--- a/papers.html
+++ b/papers.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
-    <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <title>RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good</title>
+    <meta name="keywords" content="Recommender Systems, Sustainability, Social Good, SDGs">
+    <meta name="description" content="RecSoGood 2024 | First International Workshop on Recommender Systems for Sustainability and Social Good">
     <meta name="author" content="Allegra De Filippo">
 
 
@@ -205,10 +205,10 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="https://recsys.acm.org/"><h3>co-located with RecSys 2024</h3></a>
 							<ul class="list-time">
-								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+								<li>The 18th ACM Recommender Systems Conference
+</li> <li><br> Bari (Italy), October 14-18, 2024 </li>
               </ul>
             </div>
 					</div>
@@ -219,8 +219,8 @@
 							<h3>Social Media</h3>
 							<p>Follow us on the most famous Social Networks</p>
 							<ul>
-                                <li><a href="https://www.facebook.com/AIxIA1988/"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="https://twitter.com/ai_x_ia"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.facebook.com/acmrecsys"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://twitter.com/ACMRecSys"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-google-plus" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
