--- a/call.html
+++ b/call.html
@@ -167,7 +167,7 @@
 					<p style='text-align:justify;color:black;'>We encourage the submission of original contributions, investigating novel methodologies to build creative AI systems and algorithms, and to explore the relationships between AI and artistic creativity from different perspectives. In particular, authors can submit:</p>
                     <p style='text-align:justify;color:black;'>(A) <strong>Regular papers</strong> (max. 12 + references – Springer LLNCS format);<br>
 			    (B) <strong>Reproducibility papers</strong> (max. 12 + references – Springer LLNCS format);<br>
-                    (C) <strong>Short papers</strong> (max 6 pages + references - Springer LLNCS format);
+                    (C) <strong>Short papers</strong> (max 6 pages + references - Springer LLNCS format);<br>
 		    (D) <strong>Position papers</strong> (max. 4 + references – Springer LLNCS format);<br></p>
 					                    <p style='text-align:justify;color:black;'><strong>Topics of Interest include but are not limited to:</strong>
 					                                              <ul style="font-size: 18px !important;">
