--- a/call.html
+++ b/call.html
@@ -168,7 +168,7 @@
                     <p style='text-align:justify;color:black;'>(A) <strong>Full papers</strong> (max. 12 + references – Springer LLNCS format);<br>
 			    (B) <strong>Reproducibility papers</strong> (max. 12 + references – Springer LLNCS format);<br>
                     (C) <strong>Short papers</strong> (max 6 pages + references - Springer LLNCS format);<br>
-		    (D) <strong>Position papers</strong> (max. 4 + references – Springer LLNCS format);<br></p>
+		    (D) <strong>Position papers</strong> (max. 4 + references – Springer LLNCS format);<br><br></p>
 					                    <p style='text-align:justify;color:black;'><strong>Topics of Interest include but are not limited to:</strong>
 					                                              <ul style="font-size: 18px !important;">
                       <li>  <b>Sustainable Recommender Systems Development:</b> </li>
