--- a/call.html
+++ b/call.html
@@ -164,7 +164,8 @@
                 <div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Call for Papers</span></h2>
                     <br>
-					<p style='text-align:justify;color:black;'>We encourage the submission of original contributions, investigating novel methodologies to build creative AI systems and algorithms, and to explore the relationships between AI and artistic creativity from different perspectives. In particular, authors can submit:</p>
+					<p style='text-align:justify;color:black;'>We encourage the submission of original contributions, investigating how Recommender Systems can
+contribute to a more sustainable and responsible technology ecosystem, aligning with the broader goals of achieving economic, social, and environmental sustainability. In particular, authors can submit:</p>
                     <p style='text-align:justify;color:black;'>(A) <strong>Full papers</strong> (max. 12 + references – Springer LLNCS format);<br>
 			    (B) <strong>Reproducibility papers</strong> (max. 12 + references – Springer LLNCS format);<br>
                     (C) <strong>Short papers</strong> (max 6 pages + references - Springer LLNCS format);<br>
