--- a/call.html
+++ b/call.html
@@ -202,11 +202,11 @@ contribute to a more sustainable and responsible technology ecosystem, aligning 
                     Submissions should be double blinded. Submissions must be made through the EasyChair conference system prior the specified deadline (all deadlines refer to GMT) by selecting RecSoGood as submission track. At least one of the authors should register and take part at the conference to make the presentation.</p>
                                           <br><p style='text-align:justify;color:black;'><strong>Important Dates</strong><br>
 					  
-                      * Paper submission deadline: <b>TBD, 2024</b><br>
+                      * Paper submission deadline: <b>August 30th, 2024</b><br>
 
-                      * Notification to authors: <b>TBD, 2024</b><br>
+                      * Notification to authors: <b>September 13th, 2024</b><br>
 
-                      * Camera-Ready submission: <b>TBD, 2024</b><br>
+                      * Camera-Ready submission: <b>September 20th, 2024</b><br>
 					  <br>
 
                     </p>
