--- a/call.html
+++ b/call.html
@@ -210,8 +210,8 @@ contribute to a more sustainable and responsible technology ecosystem, aligning 
 					  <br>
 
                     </p>
-					<p style='text-align:justify;color:black;'><strong>Proceedings and Post Proceedings</strong>
-					<br><p style='text-align:justify;color:black;'>All accepted papers will be published in the .... <!--A selection of the best papers, accepted for the presentation at the workshops, will be invited to submit an extended version for publication on “intelligenza Artificiale”, the International Journal of the Italian Association for Artificial Intelligence, edited by IOS Press and indexed by Thomson Reuters' "Emerging Sources Citation Index" and Scopus by Elsevier.</p>-->
+					<p style='text-align:justify;color:black;'><strong>Proceedings</strong>
+					<br><p style='text-align:justify;color:black;'>All accepted papers will be published in a proceedings volume indexed in Scopus and Web of Science<!--A selection of the best papers, accepted for the presentation at the workshops, will be invited to submit an extended version for publication on “intelligenza Artificiale”, the International Journal of the Italian Association for Artificial Intelligence, edited by IOS Press and indexed by Thomson Reuters' "Emerging Sources Citation Index" and Scopus by Elsevier.</p>-->
                     <!--<br><p style='text-align:justify;color:black;'><strong>Presentation Format</strong>
 					<br><p style='text-align:justify;color:black;'>Authors of accepted papers accepted papers at the workshops will be requested to provide a video recorded presentation of their work. Presentations will be available to all members of the association. Videos must have a length between 5 and 8 minutes according to the rules given by the workshop organizers. The video should be in MP4 format (1280x720). More details will be published here.</p>
 					--><br><p style='text-align:justify;color:black;'>For any information write to:</p>
