--- a/pc-member.html
+++ b/pc-member.html
@@ -168,7 +168,27 @@
 
                     <p style="text-align: justify; color :black">
                       <ul>
-                        <!--<li>Nome Cognome, Affiliazione</li>-->
+                        <li>Robin Burke, University of Colorado, Boulder</li>
+			<li>Iván Cantador, Universidad Autónoma de Madrid</li>
+			<li>Marco de Gemmis, University of Bari Aldo Moro</li>
+			<li>Gaetano Di Benedetto, University of Bari Aldo Moro</li>
+			<li>Karlijn Dinnissen, Utrecht University</li>
+			<li>Michael Ekstrand, Drexel University</li>
+			<li>Alexander Felfernig, TU Graz</li>
+			<li>Dongmin Hyun, Yahoo Research</li>
+			<li>Hanna Hauptmann, Utrecht University</li>
+			<li>Dietmar Jannach, University of Klagenfurt</li>
+			<li>Bart Knijnenburg, Clemson University</li>
+			<li>David Massimo, Public Value Technologies</li>
+			<li>Giacomo Medda, University of Cagliari</li>
+			<li>Alessandro Petruzzelli, University of Bari Aldo moro</li>
+			<li>Marco Polignano, University of Bari Aldo moro</li>
+			<li>Amon Rapp, University of Torino</li>
+			<li>Giuseppe Spillo, University of Bari</li>
+			<li>George Stalidis, International Hellenic University</li>
+			<li>Alain Starke, University of Amsterdam</li>
+			<li>Wolfgang Wörndl, Technical University of Munich</li>
+
                         
 					 </ul>
                     </p>
