--- a/pc-member.html
+++ b/pc-member.html
@@ -164,7 +164,7 @@
             <div class="row">
 
                 <div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">PC Members (To Be Defined)</span></h2>
+                    <h2 class="noo-sh-title-top">PC Members (To Be Extended)</span></h2>
 
                     <p style="text-align: justify; color :black">
                       <ul>
