--- a/pc-member.html
+++ b/pc-member.html
@@ -170,8 +170,8 @@
                       <ul>
                         <li>Robin Burke, University of Colorado, Boulder</li>
 			<li>Iván Cantador, Universidad Autónoma de Madrid</li>
-			<li>Marco de Gemmis, University of Bari Aldo Moro</li>
-			<li>Gaetano Di Benedetto, University of Bari Aldo Moro</li>
+			<li>Marco de Gemmis, University of Bari</li>
+			<li>Gaetano Di Benedetto, University of Bari</li>
 			<li>Karlijn Dinnissen, Utrecht University</li>
 			<li>Michael Ekstrand, Drexel University</li>
 			<li>Alexander Felfernig, TU Graz</li>
@@ -181,8 +181,8 @@
 			<li>Bart Knijnenburg, Clemson University</li>
 			<li>David Massimo, Public Value Technologies</li>
 			<li>Giacomo Medda, University of Cagliari</li>
-			<li>Alessandro Petruzzelli, University of Bari Aldo moro</li>
-			<li>Marco Polignano, University of Bari Aldo moro</li>
+			<li>Alessandro Petruzzelli, University of Bari</li>
+			<li>Marco Polignano, University of Bari</li>
 			<li>Amon Rapp, University of Torino</li>
 			<li>Giuseppe Spillo, University of Bari</li>
 			<li>George Stalidis, International Hellenic University</li>
