--- a/pc-member.html
+++ b/pc-member.html
@@ -170,6 +170,7 @@
                       <ul>
                         <li>Robin Burke, University of Colorado, Boulder</li>
 			<li>Iván Cantador, Universidad Autónoma de Madrid</li>
+			<li>Federica Cena, University of Torino</li>
 			<li>Marco de Gemmis, University of Bari</li>
 			<li>Gaetano Di Benedetto, University of Bari</li>
 			<li>Karlijn Dinnissen, Utrecht University</li>
@@ -183,6 +184,7 @@
 			<li>Giacomo Medda, University of Cagliari</li>
 			<li>Alessandro Petruzzelli, University of Bari</li>
 			<li>Marco Polignano, University of Bari</li>
+			<li>Erasmo Purificato, University of Magdeburg</li>
 			<li>Amon Rapp, University of Torino</li>
 			<li>Giuseppe Spillo, University of Bari</li>
 			<li>George Stalidis, International Hellenic University</li>
