--- a/pc-member.html
+++ b/pc-member.html
@@ -189,6 +189,7 @@
 			<li>Giuseppe Spillo, University of Bari</li>
 			<li>George Stalidis, International Hellenic University</li>
 			<li>Alain Starke, University of Amsterdam</li>
+			<li>Helma Torkamaan, Delft University of Technology</li>
 			<li>Wolfgang Wörndl, Technical University of Munich</li>
 
                         
