--- a/program.html
+++ b/program.html
@@ -170,23 +170,23 @@
                     </p>
                 </div>!-->
 	
-				<!--<div class="col-lg-12">
+				<div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Invited Talk</span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
-						<li><b>When: </b>November 30, h.14.15</li>
-						<li><b>Speaker: </b> Nome Cognome, Sapienza Affiliazione</li>
-						<li><b>Title: </b> Titolo</li>
+						<li><b>When: </b>October 18, h.--</li>
+						<li><b>Speaker: </b> Alan Said, University of Gothenburg</li>
+						<li><b>Title: </b> Recommenders for Social Good: The Role of Accountability and Sustainability</li>
 						<br>
-						<li><b>Abstract: </b>Abstract.</li>
+						<li><b>Abstract: </b>In this talk, we examine recommender systems through the lens of sustainability, social responsibility, and accountability, with a focus on their alignment with the United Nations Sustainable Development Goals (SDGs). As recommender systems continue to influence user behavior, these systems must not only provide recommendations but also support responsible consumption, reduced environmental impact, and social good. We will explore strategies mitigating the carbon footprint of recommendation models, ensure fairness, and create accountability mechanisms, offering practical insights for building recommender systems that contribute to the SDGs, particularly around sustainability and social well-being.</li>
 						<br>
-						<li><b>Bio: </b>Bio</li>
+						<li><b>Bio: </b>Alan Said is an Associate Professor at the University of Gothenburg, specializing in recommender systems. His interdisciplinary research spans data science, human-computer interaction, and information science, focusing on improving recommendation and personalization systems. With a PhD from Technische Universität Berlin, Alan has held various academic and industry roles, including as a machine learning engineer at Recorded Future and a senior researcher at Delft University of Technology. He has published extensively in top venues like RecSys and IUI and serves as Chair of the ACM RecSys Steering Committee (2023-2026).</li>
 					  </ul>
 					</p>
                 </div>
 	
                 <div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Program</span></h2>
+                    <h2 class="noo-sh-title-top">Program</span></h2>!-->
 
                     <p style="text-align: justify; color :black">
                       <ul>
