--- a/program.html
+++ b/program.html
@@ -163,7 +163,7 @@
             <div class="row">
 
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Workshop Day: TBD</span></h2>
+                    <h2 class="noo-sh-title-top">Workshop Day: October 18th, 2024</span></h2>
 
 					<!--<p style="text-align: justify; color :black">
                     Proceedings of XAI.it are now available on CEUR.ws (volume ) <a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
@@ -174,7 +174,7 @@
                     <h2 class="noo-sh-title-top">Invited Talk</span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
-						<li><b>When: </b>October 18, h.--</li>
+						<li><b>When: </b>October 18th, h.--</li>
 						<li><b>Speaker: </b> Alan Said, University of Gothenburg</li>
 						<li><b>Title: </b> Recommenders for Social Good: The Role of Accountability and Sustainability</li>
 						<br>
@@ -185,8 +185,8 @@
 					</p>
                 </div>
 	
-                <div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Program</span></h2>!-->
+                <!--<div class="col-lg-12">
+                    <h2 class="noo-sh-title-top">Program</span></h2>
 
                     <p style="text-align: justify; color :black">
                       <ul>
