--- a/program.html
+++ b/program.html
@@ -174,7 +174,7 @@
                     <h2 class="noo-sh-title-top">Invited Talk</span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
-			      <div class="banner-frame"> <img class="img-fluid" src="images/about-img.jpg" alt="" />
+			      <div class="banner-frame"> <img class="img-fluid" src="images/about-img.jpg" alt="Responsive image" />
 						<li><b>When: </b>October 18th, h.--</li>
 						<li><b>Speaker: </b> Alan Said, University of Gothenburg</li>
 						<li><b>Title: </b> Recommenders for Social Good: The Role of Accountability and Sustainability</li>
