--- a/papers.html
+++ b/papers.html
@@ -176,16 +176,44 @@
                 </div>
 			
                 <div class="col-lg-12">
-                    <!--<h2 class="noo-sh-title-top">Accepted Papers</span></h2>
+                    <h2 class="noo-sh-title-top">Accepted Papers</span></h2>
 
                     <p style="text-align: justify; color :black">
                       <ul>
-                        <li>1) Stefano Teso, Andrea Bontempelli, Fausto Giunchiglia and Andrea Passerini - <b>Interactive Label Cleaning with Example-based Explanations</b></li><br>
-						<li>2) Martin Jullum, Annabelle Redelmeier and Kjersti Aas - <b>Efficient and simple prediction explanations with groupShapley: A practical perspective</b></li><br>
-                        <li>3) Ivan Donadello and Mauro Dragoni - <b>Bridging Signals to Natural Language Explanations With Explanation Graphs</b></li><br>
-						<li>4) Rodolfo Delmonte - <b> What’s Wrong with Deep Learning for Meaning Understanding</b></li><br>
-						<li>5) Purin Sukpanichnant, Antonio Rago, Piyawat Lertvittayakumjorn and Francesca Toni - <b>LLRP-Based Argumentative Explanations for Neural Networks</b></li><br>
-						<li>6) Andrea Apicella, Salvatore Giugliano, Francesco Isgrò and Roberto Prevete - <b>Explanations in terms of Hierarchically organised Middle Level Features</b></li><br>
+<li>- Alejandro Plaza, Juan Gil and Denis Parra Santander - "14 Kg of CO2: Analyzing the Carbon Footprint and Performance of Session-Based Recommendation Algorithms"</li><br>
+
+<li>- Anas Buhayh, Elizabeth McKinnie and Robin Burke - "Decoupled Recommender Systems: Exploring Alternative Recommender Ecosystem Designs"</li><br>
+
+<li>- Antonino Ferraro, Antonio Galli, Valerio La Gatta, Marco Postiglione, Diego Russo, Gian Marco Orlando, Antonio Romano, Giuseppe Riccio and Vincenzo Moscato - "From Explanation to Exploration: promoting DivErsity in Recommendation Systems"</li><br>
+
+<li>- Antonio Purificato and Fabrizio Silvestri - "Eco-Aware Graph Neural Networks for Sustainable Recommendations"</li><br>
+
+<li>- Ardalan Arabzadeh, Tobias Vente and Joeran Beel - "Sustainable Recommender Systems: Optimizing Dataset Size for Energy-Efficient Algorithm Performance"</li><br>
+
+<li>- Ashmi Banerjee, Adithi Satish and Wolfgang Wörndl - "Enhancing Tourism Recommender Systems for Sustainable City Trips Using Retrieval-Augmented Generation"</li><br>
+
+<li>- Giacomo Balloccu, Ludovico Boratto, Gianni Fenu, Mirko Marras, Giacomo Medda and Giovanni Murgia - "Knowledge Data Modeling in Food Recommendation: A Case Study on Nutritional Values"</li><br>
+
+<li>- Giuseppe Spillo, Alberto Gaetano Valerio, Felice Franchini, Allegra De Filippo, Cataldo Musto, Michela Milano and Giovanni Semeraro - "RecSys CarbonAtor: Predicting Carbon Footprint of Recommendation System Models"</li><br>
+
+<li>- Juno Prent and Masoud Mansoury - "Correcting for Popularity Bias in Recommender Systems via Item Loss Equalization"</li><br>
+
+<li>- Lukas Wegmeth, Tobias Vente, Alan Said and Joeran Beel - "EMERS: Energy Meter for Recommender Systems"</li><br>
+
+<li>- Moritz Baumgart, Lukas Wegmeth, Tobias Vente and Joeran Beel - "e-Fold Cross-Validation for Recommender-System Evaluation"</li><br>
+
+<li>- Pavel Merinov and Francesco Ricci - "Simulating the Impact of Recommendation Salience on Tourists Experienced Utility"</li><br>
+
+<li>- Sabrina Guidotti, Gregor Donabauer, Simone Somazzi, Udo Kruschwitz, Davide Taibi and Dimitri Ognibene - "Modeling Social Media Recommendation Impacts Using Academic Networks: A Graph Neural Network Approach"</li><br>
+
+<li>- Shah Noor Khan, Eelco Herder and Diba Kaya - "Effects of Representation Nudges on the Perception of Playlist Recommendations"</li><br>
+
+<li>- Tahereh Arabghalizi and Alexandros Labrinidis - "Multi-stakeholder Recommender Systems with Volatile Items"</li><br>
+
+<li>- Uroš Sergaš, Marko Tkalcic and Bruce Ferwerda - "News Recommender System for Political Depolarization"</li><br>
+
+<li>- Veronika Bogina, Ilan Halachmi and Noam Koenigstein Koenigstein - "From Field to Algorithm: Challenges in Building Recommender Systems with Farmers for a Sustainable Future"</li><br>
+                        
 						</ul>
                     </p>
 					<p style="text-align: justify; color :black">
