--- a/papers.html
+++ b/papers.html
@@ -164,10 +164,10 @@
             <div class="row">
 
 			    <div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">TBD</span></h2>
+                    <h2 class="noo-sh-title-top"></span></h2>
 
                     <p style="text-align: justify; color :black">
-					<!--Proceedings of CREAI are now available on CEUR.ws (volume )
+					<!--Proceedings are now available on CEUR.ws (volume )
 					<a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
 					</p>
 					<!--<p style="text-align: justify; color :black"> To Be Prepared
