--- a/program.html
+++ b/program.html
@@ -186,34 +186,61 @@
 					</p>
                 </div>
 	
-                <!--<div class="col-lg-12">
+                <div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Program</span></h2>
 
                     <p style="text-align: justify; color :black">
                       <ul>
-                        <li><b>h.14.00 - 14.10, Workshop Opening</b></li>
+			<li><b>h.08.00 - 09.00, Registration</b></li>
                         <li></li>
                         <br>
-                        <li><b>h.14.10 - 15.00, Invited Talk</b></li>
-                        <li>- <b></b></li>
+                        <li><b>h.09.00 - 09.15, Workshop Opening and welcome</b></li>
+                        <li></li>
                         <br>
-                        <li><b>h.15.00 - 16.00, Session 1</b></li>
-						<li><i>(15 min. presentation + 5 min. discussion per paper)</i></li>
-                        <li></b></li><br>
-                        <li>- <b></b></li><br>
-                        <li></b></li>
+                        <li><b>h.09.15 - 10.30, Session 1 - Recommender Systems for Sustainable Development</b></li>
+			<li><i>(12 min. presentation + 5 min. Q&A per LONG paper - 8 min. presentation + 4 min. Q&A per SHORT paper)</i></li>
+			<li>- <b>"Decoupled Recommender Systems: Exploring Alternative Recommender Ecosystem Design"</b>, Anas Buhayh, Elizabeth McKinnie and Robin Burke - LONG paper</li>
                         <br>
-						<br>
-                        <li><b>h.16.00 - 16.30, Break</b></li>
+			<li>- <b>"Enhancing Tourism Recommender Systems for Sustainable City Trips Using Retrieval Augmented Generation"</b>, Ashmi Banerjee, Adithi Satish and Wolfgang Wörndl - LONG paper</li>
                         <br>
-                        <li><b>h.16.30 - 17.50, Session 2</b></li>
-                        <li><i>(15 min. presentation + 5 min. discussion per paper)</i></li>
-                        <li>- <b></b></li><br>
-                        <li> - <b></b></li><br>
-                        <li> - <b> </b></li><br>
-                        <li> - <b></b></li>
+			<li>- <b>"Simulating the Impact of Recommendation Salience on Tourists Experienced Utility"</b>, Pavel Merinov and Francesco Ricci - LONG paper</li>
                         <br>
-                        <li><b>h.17.50 - 18.00, Workshop Closing</b></li>
+			<li>- <b>"Knowledge Data Modeling in Food Recommendation: A Case Study on Nutritional Values"</b>, Giacomo Balloccu, Ludovico Boratto, Gianni Fenu, Mirko Marras, Giacomo Medda and Giovanni Murgia - SHORT paper</li>
+                        <br>
+			<li>- <b>"Modeling Social Media Recommendation Impacts Using Academic Networks: A Graph Neural Network Approach"</b>, Sabrina Guidotti, Gregor Donabauer, Simone Somazzi, Udo Kruschwitz, Davide Taibi and Dimitri Ognibene - SHORT paper</li>
+                        <br>
+                        <br>
+			<li><b>h.10.30 - 11.00, Coffee Break - Poster Session </b> (See the list of posters at the end of this page)</li>
+                        <br>
+                        <li><b>h.11.00 - 12.30, Session 2 - Energy and Carbon Efficiency in Recommender Systems</b></li>
+			<li><i>(12 min. presentation + 5 min. Q&A per LONG paper - 8 min. presentation + 4 min. Q&A per SHORT paper)</i></li>
+			      
+                        <li>- <b>"Sustainable Recommender Systems: Optimizing Dataset Size for Energy-Efficient Algorithm Performance"</b>, Ardalan Arabzadeh, Tobias Vente and Joeran Beel - SHORT paper</li><br>
+
+			<li>- <b>"EMERS: Energy Meter for Recommender Systems"</b>, Lukas Wegmeth, Tobias Vente, Alan Said and Joeran Beel - SHORT paper</li><br>
+
+			<li>- <b>"e-Fold Cross-Validation for Recommender-System Evaluation"</b>, Moritz Baumgart, Lukas Wegmeth, Tobias Vente and Joeran Beel - SHORT paper</li><br>
+
+			<li>- <b>"RecSys CarbonAtor: Predicting Carbon Footprint of Recommendation System Models"</b>, Giuseppe Spillo, Alberto Gaetano Valerio, Felice Franchini, Allegra De Filippo, Cataldo Musto, Michela Milano and Giovanni Semeraro - LONG paper</li><br>
+
+			<li>- <b>"Eco-Aware Graph Neural Networks for Sustainable Recommendations"</b>, Antonio Purificato and Fabrizio Silvestri - LONG paper</li><br>
+
+			<li>- <b>"14 Kg of CO2: Analyzing the Carbon Footprint and Performance of Session-Based Recommendation Algorithms"</b>, Alejandro Plaza, Juan Gil and Denis Parra - LONG paper</li><br>
+
+                        <br>
+			
+                        <li><b>h.12.30 - 14.15, Lunch Break - Poster Session </b> (See the list of posters at the end of this page)</li>
+                        <br>
+			<li><b>h.14.15 - 15.00, Keynote - Alan Said, University of Gothenburg - "Recommenders for Social Good: The Role of Accountability and Sustainability"</b></li>
+                        <br>
+                        <li><b>h.15.00 - 15.30, Session 3 - Diversity and Personalization in Recommendations</b></li>
+                        <li><i>(12 min. presentation + 5 min. Q&A per LONG paper - 8 min. presentation + 4 min. Q&A per SHORT paper)</i></li>
+                        <li> - <b>"From Explanation to Exploration: promoting DivErsity in Recommendation Systems"</b>, Antonino Ferraro, Antonio Galli, Valerio La Gatta, Marco Postiglione, Diego Russo, Gian Marco Orlando, Antonio Romano, Giuseppe Riccio and Vincenzo Moscato - LONG paper</li>
+                        <br>
+			<li> - <b>"Effects of Representation Nudges on the Perception of Playlist Recommendations"</b>, Shah Noor Khan, Eelco Herder and Diba Kaya - SHORT paper</li>
+                        <br>
+                        <br>
+                        <li><b>h.15.30 - 15.45, Workshop Closing</b></li>
                         <br>
 					  </ul>
                     </p>				
